# src/api/types.ts
@@ -55,6 +55,10 @@ export type ThresholdsUpdate = Schemas['ThresholdsUpdate']
 export type ModelsList = Schemas['ModelsRead']
 export type ModelInfo = Schemas['ModelRead']
 export type ModelActivate = Schemas['ModelActivate']
+export type UserAdmin = Schemas['UserAdminRead']
+export type UserCreate = Schemas['UserCreate']
+export type UserUpdate = Schemas['UserUpdate']
+export type UserWithPassword = Schemas['UserWithPassword']
 export type EvalReportSummary = Schemas['EvalReportSummary']
 export type EvalReport = Schemas['EvalReportRead']
 export type LearningSummary = Schemas['LearningSummary']
